# aido

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  SimulationWrapper.py  TODO.md  __init__.py  aido.py  aido_cli.py  config.json  example.py  example_comparison.py  example_discrete_layers.py  example_full_calorimeter.py  example_one_layer_simple.py  interface.py  modules.py  notes.txt  pyproject.toml  requirements.txt  setup.py  setup.sh  sim_convert.py  sim_param_dict  test.py  validate_surrogate.py
aido/: __init__.py  config.py  interface.py  logger.py  main.py  optimization_helpers.py  optimizer.py  plotting.py  scheduler.py  simulation_helpers.py  surrogate.py  surrogate_validation.py  task.py  training.py
aido.wiki.github/source/: aido.md  modules.md
aido/monitoring/: logger.py  tasks.py
container_examples/: interface_globals.py  reconstruction_test.py  simulation_test.py
container_examples/calo_opt/: calo_opt_interface.py  calo_opt_sim.py  conversion_functions.py  generator.py  interface.py  interface_calo_opt.py  interface_simple.py  optimizer.py  reco_script.py  reconstruction.py  simulation.py  surrogate.py  training_script.py
docs/: conf.py  cp_to_github.sh  generate_docs.sh  home.md  home.rst  index.md  requirements.txt  setup.py  upload_docs_to_github.sh  upload_docs_to_gitlab.sh
docs/_static/: html_style.css
docs/api/: aido.config.rst  aido.interface.rst  aido.logger.rst  aido.main.rst  aido.optimization_helpers.rst  aido.optimizer.rst  aido.plotting.rst  aido.scheduler.rst  aido.simulation_helpers.rst  aido.surrogate.rst  aido.task.rst  aido.training.rst  index.rst  toc.md  toc.rst
docs/guides/: example.md  getting_started.md  home.md  usage.md
docs/source/: aido.optimizer_helpers.rst  aido.rst  aido.scheduler.rst  aido.simulation_helpers.rst  aido.surrogate.rst  aido.training.rst  index.rst  modules.rst
examples/: example_comparison.py  example_discrete_layers.py  example_full_calorimeter.py  example_material_choice.py  example_multiple_convergence.py  example_one_layer_simple.py  example_simple.py  example_test.py  example_two_layers.py
examples/calo_opt/: interface.py  interface_calo_opt.py  interface_simple.py  plotting.py  reco_script.py  reconstruction.py  reconstruction_validation.py  simulation.py  surrogate_validation.py  train.py  validation.py
examples/calo_opt/reconstruction/: dataset.py  model.py  train.py  validation_reconstruction.py  validation_surrogate.py
examples/calo_opt/validation/: reconstruction.py  surrogate.py
modules/: aido.py  interface.py  optimization_helpers.py  optimizer.py  plotting.py  scheduler.py  simulation_helpers.py  surrogate.py  training.py  training_script.py
simulation/: SimulationHelpers.py  conversion.py  generator.py
simulation_container/: test.py
tests/: test_config.py  test_example.py  test_optimization_helpers.py  test_plotting.py  test_scheduler.py  test_simulation_helpers.py
utils/: SimulationHelpers.py  StructureFlowchart.drawio  TODOs.md  aido.mplstyle  detector.drawio  discrete_parameters.drawio  generator.py  htcondor_settings.py  information_flow.drawio  notes_2.txt  notes_3.txt  notes_4.txt  qr.py  scheduler.drawio  workflow_simplified.drawio
