[project]
name = "aido"
version = "0.1.3"
requires-python = ">=3.12.0, <3.13"
dependencies = [
    "alabaster==1.0.0",
    "annotated-types==0.7.0",
    "asttokens==2.4.1",
    "autoapi>=2.0.1",
    "autocommand==2.2.2",
    "b2luigi==1.0.1",
    "babel==2.16.0",
    "backports-tarfile==1.2.0",
    "cachetools==5.4.0",
    "certifi==2024.8.30",
    "cfgv==3.4.0",
    "charset-normalizer==3.4.0",
    "colorama==0.4.6",
    "colorlog==6.9.0",
    "comm==0.2.2",
    "contourpy==1.3.0",
    "cramjam==2.8.3",
    "cycler==0.12.1",
    "debugpy==1.8.7",
    "decorator==5.1.1",
    "distlib==0.3.8",
    "docutils==0.21.2",
    "executing==2.1.0",
    "fastparquet==2024.5.0",
    "filelock==3.15.4",
    "flake8==7.1.1",
    "fonttools==4.54.1",
    "fsspec==2024.6.1",
    "furo>=2025.9.25",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "html2text==2024.2.26",
    "identify==2.6.0",
    "idna==3.10",
    "imagesize==1.4.1",
    "importlib-metadata==8.0.0",
    "importlib-resources==6.4.0",
    "inflect==7.3.1",
    "iniconfig==2.0.0",
    "ipykernel==6.29.5",
    "ipython==8.28.0",
    "isort==5.9.3",
    "jaraco-collections==5.1.0",
    "jaraco-context==5.3.0",
    "jaraco-functools==4.0.1",
    "jaraco-text==3.12.1",
    "jedi==0.19.1",
    "jinja2==3.1.4",
    "joblib==1.4.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.7",
    "line-profiler==4.2.0",
    "lockfile==0.12.2",
    "luigi==3.5.1",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "matplotlib==3.9.2",
    "matplotlib-inline==0.1.7",
    "mccabe==0.7.0",
    "mdit-py-plugins==0.4.2",
    "mdurl==0.1.2",
    "more-itertools==10.3.0",
    "mpmath==1.3.0",
    "myst-parser==4.0.0",
    "nest-asyncio==1.6.0",
    "networkx==3.3",
    "nodeenv==1.9.1",
    "numpy==2.0.1",
    "nvidia-cublas-cu12==12.1.3.1",
    "nvidia-cuda-cupti-cu12==12.1.105",
    "nvidia-cuda-nvrtc-cu12==12.1.105",
    "nvidia-cuda-runtime-cu12==12.1.105",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.0.2.54",
    "nvidia-curand-cu12==10.3.2.106",
    "nvidia-cusolver-cu12==11.4.5.107",
    "nvidia-cusparse-cu12==12.1.0.106",
    "nvidia-nccl-cu12==2.20.5",
    "nvidia-nvjitlink-cu12==12.5.82",
    "nvidia-nvtx-cu12==12.1.105",
    "packaging==24.1",
    "pandas==2.2.2",
    "pandoc==2.4",
    "parse==1.20.2",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==10.4.0",
    "platformdirs==4.3.6",
    "plotly==6.3.0",
    "pluggy==1.5.0",
    "plumbum==1.9.0",
    "ply==3.11",
    "pre-commit==3.8.0",
    "prompt-toolkit==3.0.48",
    "psutil==6.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==17.0.0",
    "pycodestyle==2.12.1",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "pyflakes==3.2.0",
    "pygments==2.18.0",
    "pyparsing==3.2.0",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.16",
    "pyqt5-sip==12.16.1",
    "pytest==8.3.3",
    "pytest-mock==3.14.0",
    "python-daemon==3.0.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "pyyaml==6.0.2",
    "pyzmq==26.2.0",
    "qrcode==8.1",
    "requests==2.32.3",
    "retry2==0.9.5",
    "scipy==1.14.1",
    "setuptools==75.2.0",
    "six==1.16.0",
    "smmap==5.0.1",
    "snowballstemmer==2.2.0",
    "sphinx==8.1.3",
    "sphinx-autoapi>=3.6.1",
    "sphinx-autodoc-typehints==2.5.0",
    "sphinx-markdown-builder==0.6.7",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "stack-data==0.6.3",
    "sympy==1.13.1",
    "tabulate==0.9.0",
    "tenacity==8.5.0",
    "threadpoolctl==3.5.0",
    "tomli==2.0.1",
    "torch==2.4.0",
    "tornado==6.4.1",
    "traitlets==5.14.3",
    "triton==3.0.0",
    "typeguard==4.3.0",
    "typing-extensions==4.12.2",
    "tzdata==2024.1",
    "urllib3==2.2.3",
    "virtualenv==20.26.4",
    "wcwidth==0.2.13",
    "wheel==0.44.0",
    "zipp==3.19.2",
]
description = "Tool for the optimization of detectors with machine learning"

[tool.pytest.ini_options]
addopts = "-ra -q -m 'not slow'"
testpaths = ["tests"]
pythonpath = [".", "examples"]
markers = [
    "slow: Longer than 1 minute",
]
